# computer

./: CMakeLists.txt  Readme.md
include/: ColorBox.h  Computer.h  ConsoleWidget.h  MainWindow.h  QColorBox.h  SettingsDialog.h  archives_model.hpp  camera_config_model.hpp  channel_configurations_model.hpp  color_box.hpp  compile_worker.hpp  computer.hpp  console_widget.hpp  cv_widget.hpp  heartbeat.hpp  input_dialog.hpp  main_window.hpp  qhsv_picker.hpp  quser_info.hpp  server_thread.hpp  settings_dialog.hpp  vision_dialog.hpp
rc/: Info.plist  platform.hints  platform.qrc  rc.qrc  target.c  target.h  target.qrc
src/: ColorBox.cpp  ConsoleWidget.cpp  MainWindow.cpp  QColorBox.cpp  SettingsDialog.cpp  archives_model.cpp  camera_config_model.cpp  channel_configurations_model.cpp  color_box.cpp  compile_worker.cpp  console_widget.cpp  cv_widget.cpp  heartbeat.cpp  input_dialog.cpp  main.cpp  main_window.cpp  qhsv_picker.cpp  quser_info.cpp  server_thread.cpp  settings_dialog.cpp  vision_dialog.cpp
ui/: MainWindow.ui  SettingsDialog.ui  input_dialog.ui  main_window.ui  settings_dialog.ui  vision.ui  vision_dialog.ui
